Stubbing authentication, and renaming to helper
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ include_directories(
       ${QT_INCLUDES}
 )
 
-add_subdirectory(worker)
+add_subdirectory(helper)
 
 set(policonnect_SRCS
     main.cpp
